# ipyforcegraph

./: .gitignore  .prettierignore  .readthedocs.yml  .yarnrc  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.txt  README.md  dodo.py  ignored-vulnerabilities.json  install.json  package.json  pyproject.toml  tsconfig.json  tsconfigbase.json  webpack.config.js  webpack.module.ids.json
.binder/: environment.yml  jupyter_config.json  overrides.json  postBuild  start
.github/: lock-environment.yml  pull_request_template.md  requirements-build.txt
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md  release.md
.github/env_specs/lab/: lab3.6.yml
.github/env_specs/py/: 3.11.yml
.github/specs/: _atest.yml  _build.yml  _channels.yml  _demo.yml  _docs.yml  _doit.yml  _ext.yml  _lint.yml  _lint_unix.yml  _lint_win.yml  _nomkl.yml  _release.yml  _run.yml  _spell.yml  _utest.yml  binder.yml  dev.yml  lock.yml  rtd.yml  test.yml
.github/specs/_lab/: lab3.5.yml  lab3.6.yml
.github/specs/_py/: py3.11.yml  py3.8.yml
.github/workflows/: badges.yml  ci.yml  pages.yml
atest/API/: 01_Behaviors.robot  02_Colors.robot  02_Colors.robot.j2  02_Colors_ForceGraph.robot  02_Colors_ForceGraph3D.robot  02_Colors_GRAPH.robot.j2  03_Events.robot  04_Shapes.robot  04_Shapes.robot.j2  04_Shapes_ForceGraph.robot  04_Shapes_ForceGraph3D.robot  04_Shapes_GRAPH.robot.j2  05_LinkShapes_ForceGraph.robot  05_LinkShapes_ForceGraph3D.robot  05_LinkShapes_GRAPH.robot.j2  06_Scales_ForceGraph.robot  06_Scales_ForceGraph3D.robot  06_Scales_GRAPH.robot.j2  07_Camera_ForceGraph.robot  07_Camera_ForceGraph3D.robot  07_Camera_GRAPH.robot.j2  08_LinkShapes2_ForceGraph.robot  08_LinkShapes2_ForceGraph3D.robot  08_LinkShapes2_GRAPH.robot.j2  __init__.robot
atest/Notebooks/: 01_Index.robot  02_Behaviors.robot  03_3D.robot  04_Force.robot  05_WidgetSource.robot  06_DodoSource.robot  07_DodoApp.robot  08_LinkText.robot  09_Wrappers.robot  10_Scales.robot  Examples.robot  __init__.robot
atest/Regression/: 103_2D_Not_Text.robot  109_Director_Padding.robot  90_Preserved_ID_Order.robot  __init__.robot
atest/_libraries/: Colors.py  Ports.py
atest/_resources/fixtures/: default_setting_overrides.json
atest/_resources/fixtures/api/: Camera.py  Colors.py  Event.py  GraphData.py  LinkSelection.py  LinkShapes.py  LinkShapes2.py  NodeLabels.py  NodeSelection.py  NodeShapes.py  NodeTooltip.py  Scales.py  node_labels.py  node_selection.py
atest/_resources/fixtures/regression/: gh-103.py  gh-109.py  gh-90.py
atest/_resources/keywords/: Browser.robot  Coverage.robot  IPyForceGraph.robot  Lab.robot  Regression.robot  Screenshots.robot  Server.robot
atest/_resources/variables/: Browser.robot  IPyForceGraph.robot  Lab.robot  Server.robot
docs/: conf.py  dictionary.txt  environment.yml  index.md
docs/_static/: theme.css
docs/reference/: base.md  behaviors.md  forces.md  index.md  module.md  scales.md  sources.md  widgets.md
examples/: 3D.ipynb  Behaviors.ipynb  Camera.ipynb  DAG_Contraints.ipynb  Director.ipynb  DodoApp.ipynb  DodoSource.ipynb  FORCEGRAPH_DEBUG.ipynb  Forces.ipynb  LinkText.ipynb  Scales.ipynb  Shapes.ipynb  Test_Behaviors.ipynb  Test_Forces.ipynb  Utils.ipynb  WidgetSource.ipynb  Wrappers.ipynb  _index.ipynb  requirements-dodo.txt  requirements.txt
examples/datasets/: blocks.json  erdos1.json  futbol_small.json  jp_css_vars.txt  miserables.json
examples/datasets/futbol_raw_datasets/: countries.csv  goalscorers.csv  results.csv  shootouts.csv
examples/future/: FORCEGRAPH_DEBUG.ipynb  NetworkX.ipynb  New Behaviors.ipynb  UI Experiment.ipynb  Words.ipynb  _testing.ipynb  generators.ipynb
examples/supporting/: Make_Erdos_Graph.ipynb  Make_Futbol_Graphs.ipynb
examples/wip/: Link Text Shape.ipynb
js/: display_widget.ts  draw-utils.ts  index.ts  plugin.ts  template-utils.ts  theme-utils.ts  tokens.ts  tsconfig.cov.json  tsconfig.json  typings.d.ts  utils.ts
js/schema/: forcegraph_schema.ts
js/widgets/: behavior.ts  display.ts  index.ts  serializers.ts  source.ts
js/widgets/behaviors/: base.ts  dag.ts  force-center.ts  force-collision.ts  force-link.ts  force-manybody.ts  force-radial.ts  force.ts  graph-camera.ts  graph-data.ts  graph-image.ts  index.ts  labels.ts  link-arrow.ts  link-arrows.ts  link-color.ts  link-directional-arrow-color.ts  link-directional-arrow-length.ts  link-directional-arrow-rel-pos.ts  link-directional-particle-color.ts  link-directional-particle-speed.ts  link-directional-particle-width.ts  link-directional-particles-emit.ts  link-directional-particles.ts  link-label.ts  link-particles.ts  link-selection.ts  link-shape.ts  link-tooltip.ts  link-width.ts  node-color.ts  node-label.ts  node-selection.ts  node-shape.ts  node-size.ts  node-tooltip.ts  particles.ts  scales.ts  selection.ts  tooltip.ts  (+1 more)
js/widgets/behaviors/forces/: dag.ts  force-center.ts  force-cluster.ts  force-collision.ts  force-link.ts  force-x.ts  (+6 more)
js/widgets/display/: 2d.ts  3d.ts  index.ts
js/widgets/serializers/: dataframe.ts  index.ts  widget.ts
js/widgets/sources/: dataframe.ts  index.ts
lite/: jupyter-lite.json  jupyter_lite_config.json
pages-lite/: jupyter_lite_config.json
scripts/: atest.py  lab.py  nblint.py  preflight.py  project.py  reporter.py  utils.py
src/ipyforcegraph/: __init__.py  _base.py  _types.py  behaviors.py  constants.py  forcegraph.py  forces.py  graphs.py  js.py  serializers.py  styled_widget.py  trait_utils.py  utils.py
src/ipyforcegraph/behaviors/: __init__.py  _base.py  dag_mode.py  forces.py  graph.py  link.py  node.py  particles.py  recording.py  scales.py  selection.py  shape.py  shapes.py  style.py  tooltip.py  ui.py  wrappers.py
src/ipyforcegraph/schema/: forcegraph_schema.json
src/ipyforcegraph/sources/: __init__.py  dataframe.py  dodo.py  widget.py
src/ipyforcegraph/tests/: __init__.py  conftest.py  test_dag_widget.py  test_dodo_source.py  test_graph_warnings.py  test_meta.py  test_scales.py  test_serializers.py  test_validators.py  test_widget_model_meta.py  test_widget_source.py  test_wrappers.py
style/: index.css
(+5 files in other folders)
