[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ipyforcegraph"
version = "0.1.0"
description = "force-graph widget for Jupyter"
authors = [
    {name = "Dane Freeman", email = "dane.freeman@gtri.gatech.edu"},
]
readme = "README.md"
classifiers = [
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ipywidgets >=8.0.4,<9",
    "networkx",
    "numcodecs",
    "traittypes",
    "pandas",
]

[project.urls]
"Bug Tracker" = "https://github.com/jupyrdf/ipyforcegraph/issues"
"Changelog" = "https://github.com/jupyrdf/ipyforcegraph/blob/main/CHANGELOG.md"
"Documentation" = "https://ipyforcegraph.rtfd.io"
"Source" = "https://github.com/jupyrdf/ipyforcegraph"

[tool.flit.sdist]
include = ["src/_d"]

[tool.flit.external-data]
directory = "src/_d"

[tool.isort]
profile = "black"
known_first_party = "ipyforcegraph"

[tool.mypy]
files = "src"
allow_redefinition = true

[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = "-vv --ff --pyargs ipyforcegraph --cov ipyforcegraph --cov-report term-missing:skip-covered --cov-report html:build/htmlcov --no-cov-on-fail --html build/pytest.html --self-contained-html --junitxml build/pytest.xunit.xml"
