[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core<4,>=3.7.1",
]

[project]
name = "ipyforcegraph"
version = "0.3.0"
description = "2D and 3D force-directed graph widgets for Jupyter"
readme = "README.md"
authors = [
    {name = "ipyforcegraph contributors", email = "jupyrdf@users.noreply.github.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "ipywidgets<9,>=8.0.4",
  "numcodecs",
  "pandas",
  "traittypes",
]
[project.urls]
"Bug Tracker" = "https://github.com/jupyrdf/ipyforcegraph/issues"
"Changelog" = "https://github.com/jupyrdf/ipyforcegraph/blob/main/CHANGELOG.md"
"Documentation" = "https://ipyforcegraph.rtfd.io"
"Source" = "https://github.com/jupyrdf/ipyforcegraph"


[tool.doit]
backend = "sqlite3"
verbosity = 2
par_type = "thread"
default_tasks = ["binder"]

[tool.doit.commands.list]
status = true
subtasks = true

[tool.flit.sdist]
include = ["src/_d"]

[tool.flit.external-data]
directory = "src/_d"

[tool.isort]
profile = "black"
known_first_party = "ipyforcegraph"

[tool.mypy]
cache_dir = "build/.mypy_cache"
sqlite_cache = true
python_version = "3.8"
# settings
allow_redefinition = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
# broken by ipywidgets
# disallow_any_unimported = true

[[tool.mypy.overrides]]
module = [
    "importlib.metadata",
    "ipywidgets",
    "numcodecs",
    "numpy",
    "pandas",
    "traittypes",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = "-vv --ff --pyargs ipyforcegraph --cov ipyforcegraph --cov-report term-missing:skip-covered --cov-report html:build/htmlcov --no-cov-on-fail --html build/pytest.html --self-contained-html --junitxml build/pytest.xunit.xml"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:traittypes",
]
