[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core<4,>=3.9",
]

[project]
name = "ipyforcegraph"
version = "0.3.6"
description = "2D and 3D force-directed graph widgets for Jupyter"
readme = "README.md"
authors = [
    {name = "ipyforcegraph contributors", email = "jupyrdf@users.noreply.github.com"},
]
requires-python = ">=3.8"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 3",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "ipywidgets<9,>=8.0.4",
  "numcodecs",
  "pandas",
  "traittypes",
]
[project.urls]
"Bug Tracker" = "https://github.com/jupyrdf/ipyforcegraph/issues"
"Changelog" = "https://github.com/jupyrdf/ipyforcegraph/blob/main/CHANGELOG.md"
"Conda Forge" = "https://github.com/conda-forge/ipyforcegraph-feedstock"
"Documentation" = "https://ipyforcegraph.rtfd.io"
"NPM" = "https://www.npmjs.com/package/@jupyrdf/jupyter-forcegraph"
"PyPI" = "https://pypi.org/project/ipyforcegraph"
"Source" = "https://github.com/jupyrdf/ipyforcegraph"

[tool.ruff]
select = [
  "E",
  "F",
  "I",
  "PLE",
  "W",
]
ignore = ["E501"]
cache-dir = "build/.ruff_cache"

[tool.pytest.ini_options]
junit_family = "xunit2"
cache_dir = "build/.pytest_cache"
addopts = [
  "--pyargs",
  "ipyforcegraph",
  # for contributors
  "--cov-report=term-missing:skip-covered",
  "--color=yes",
  # for review
  "--html=build/reports/pytest.html",
  "--self-contained-html",
  "--cov-report=html:build/reports/cov_utest/html",
  "--cov-context=test",
  # coverage
  "--cov=ipyforcegraph",
  "--no-cov-on-fail",
  # for robots
  "--junitxml=build/reports/pytest.xunit.xml",
  "--json-report",
  # misc
  "-vv",
  "--ff",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:traittypes",
    "ignore:.metadata:DeprecationWarning:ipywidgets",
]

[tool.coverage.run]
data_file = "build/reports/cov_utest/.coverage"
parallel = true
branch = true

[tool.coverage.html]
show_contexts = true

[tool.coverage.paths]
ipyforcegraph = [
    "src/ipyforcegraph",
    "*/src/ipyforcegraph"
]

[tool.mypy]
cache_dir = "build/.mypy_cache"
sqlite_cache = true
python_version = "3.8"
# settings
allow_redefinition = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
# broken by ipywidgets
# disallow_any_unimported = true

[[tool.mypy.overrides]]
module = [
    "importlib.metadata",
    "ipywidgets",
    "numcodecs",
    "numpy",
    "pandas",
    "traittypes",
    "doit.*",
]
ignore_missing_imports = true

[tool.doit]
backend = "sqlite3"
verbosity = 2
par_type = "thread"
default_tasks = ["binder"]

[tool.doit.commands.list]
status = true
subtasks = true

[tool.flit.sdist]
include = ["src/_d"]

[tool.flit.external-data]
directory = "src/_d"

[tool.nbqa.addopts]
ruff = ["--ignore=E402"]
